objects/ALTF__Account_Plan_Row__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipName>Account_Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <label>Account Manager Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipName>Plan_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Row_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows nesting of rows</description>
        <label>Account Row Parent</label>
        <referenceTo>ALTF__Account_Plan_Row__c</referenceTo>
        <relationshipName>Account_Row_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Altify_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Altify Account</label>
        <referenceTo>ALTF__Account__c</referenceTo>
        <relationshipName>Altify_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Effective_Account_Id__c</fullName>
        <formula>IF (NOT(ISBLANK( ALTF__Account__c )), CASESAFEID(ALTF__Account__c) , CASESAFEID(ALTF__Legacy_Unit_Division__r.ALTF__Account__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Effective_Division_Id__c</fullName>
        <formula>IF(NOT(ISBLANK( ALTF__Account_Division__c )), CASESAFEID(ALTF__Account_Division__c) , CASESAFEID(ALTF__Legacy_Unit_Division__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Division Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Effective_Insight_Map_Account_Id__c</fullName>
        <formula>IF (NOT(ISBLANK( ALTF__Account__c )), CASESAFEID(ALTF__Account__c) , CASESAFEID(ALTF__Legacy_Insight_Map_Division__r.ALTF__Account__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Insight Map Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Effective_Insight_Map_Division_Id__c</fullName>
        <formula>IF(NOT(ISBLANK( ALTF__Account_Division__c )), CASESAFEID(ALTF__Account_Division__c) , CASESAFEID(ALTF__Legacy_Insight_Map_Division__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Insight Map Division Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Effective_Rel_Map_Account_Id__c</fullName>
        <formula>IF (NOT(ISBLANK( ALTF__Account__c )), CASESAFEID(ALTF__Account__c) , CASESAFEID(ALTF__Legacy_Relationship_Map_Division__r.ALTF__Account__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Relationship Map Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Effective_Rel_Map_Division_Id__c</fullName>
        <formula>IF(NOT(ISBLANK( ALTF__Account_Division__c )), CASESAFEID(ALTF__Account_Division__c) , CASESAFEID(ALTF__Legacy_Relationship_Map_Division__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Relationship Map Division Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide row.  Will still be used but not rendered on the map</description>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Legacy_Insight_Map_Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Associate insights with a division rather than just the account.</description>
        <label>Legacy Insight Map Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipName>Legacy_Insight_Map_Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Legacy_Relationship_Map_Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Associate relationship map with a division rather than just the account.</description>
        <label>Legacy Relationship Map Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipName>Legacy_Relationship_Map_Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Legacy_Unit_Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Associate units with a division rather than just the account.</description>
        <label>Legacy Unit Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipName>Legacy_Unit_Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Type__c</fullName>
        <defaultValue>&quot;Letters&quot;</defaultValue>
        <description>Type and purpose of row.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>rollup</fullName>
                    <label>Rollup</label>
                </value>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>division</fullName>
                    <label>Division</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify Account Manager Plan Row</label>
    <nameField>
        <label>Altify Account Manager Plan Row</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Manager Plan Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>